# supply-chain-defense-env

./: .gitattributes  Dockerfile  README.md  __init__.py  client.py  deploy_space_early.sh  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  round2-hackathon-spec.txt  scenarios.py  train_job.py
artifacts/: metrics.jsonl  training_examples.jsonl  transitions.jsonl  world_model.json
configs/: curriculum.yaml  env.yaml  planner.yaml  ppo.yaml  world_model.yaml
notebooks/: round2_training_colab.ipynb
openenv_agentic_security_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
planning/: __init__.py  metrics.py  plan_memory.py  planner.py  replanner.py
server/: __init__.py  agentic_security_lab_environment.py  app.py  requirements.txt
server/static/: index.html
session_logs/: session_391c98d0-8c68-4180-8ece-e93316b76d0f_20260425_151423.json  session_e208d39c-801e-4e98-bcbf-3985d7ef5936_20260425_144427.json
tests/: test_environment.py  test_reward_hacking.py
training/: __init__.py  adversarial_attacker.py  callbacks.py  curriculum.py  evaluate.py  grpo_config_cell.py  plot_metrics.py  procedural_scenarios.py  rewards.py  security_apis.py  self_improve.py  train_grpo.py  train_ppo.py  trajectory_filter.py  verifiers.py
world_model/: __init__.py  dataset.py  model.py  rollout.py  train_world_model.py
