# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-agentic_security_lab"
version = "0.1.0"
description = "Agentic Security Lab environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.1",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
train = [
    "accelerate>=0.34.0",
    "datasets>=2.21.0",
    "peft>=0.12.0",
    "transformers>=4.44.0",
    "trl>=0.10.1",
]

[project.scripts]
server = "agentic_security_lab.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "agentic_security_lab",
    "agentic_security_lab.server",
    "agentic_security_lab.planning",
    "agentic_security_lab.training",
    "agentic_security_lab.world_model",
]

[tool.setuptools.package-dir]
"agentic_security_lab" = "."
"agentic_security_lab.server" = "server"
"agentic_security_lab.planning" = "planning"
"agentic_security_lab.training" = "training"
"agentic_security_lab.world_model" = "world_model"
